<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetDetailsActivity"
    android:background="@color/white">

    <!-- Вкладки для просмотра заметок -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/green"
        app:tabTextColor="@color/light_green"
        android:background="@color/white"
        app:tabIndicatorColor="@color/light_green"/>


    <!-- Контейнер для отображения фрагментов заметок -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabLayout_notes" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/your_pet"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingVertical="5dp"/>

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/imageView_pet_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_new_photo_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"/>
        </FrameLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <TextView
            android:id="@+id/textView_pet_name"
            android:textSize="18sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="My pet"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:maxLength="72"
            android:maxLines="1"
            android:textColor="@color/black"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/textView_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="12.12.2001"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="13sp" />
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/textView_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="100Kg"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="13sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background_green"
        android:textSize="36sp"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"
        android:text="+"/>

    <RelativeLayout
        android:id="@+id/add_new_note_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"
        android:visibility="gone">
        <RelativeLayout
            android:id="@+id/cancel_add_new_note_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_note"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/green"/>
        <Space
            android:layout_width="3dp"
            android:layout_height="20dp"/>
        <EditText
            android:id="@+id/note_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/neutral_grey"
            android:textSize="14sp"
            android:hint="@string/enter_label"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"/>

        <Space
            android:layout_width="3dp"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/note_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/neutral_grey"
            android:textSize="14sp"
            android:hint="@string/enter_time"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:focusable="false"
            android:clickable="true"/>

        <Space
            android:layout_width="3dp"
            android:layout_height="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_new_note_button"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/apply"
            android:textSize="16sp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button_background_green"
            android:layout_margin="15dp"/>
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>